# BEXA3UI

./: Cargo.toml  LICENSE  LICENSE-COMMERCIAL  REACTIVE_COMPONENTS.md  README.md  RoadMap.md
Docs/: RFC-001-INPUT-TERMINAL.md
crates/bexa-ui/: Cargo.toml
crates/bexa-ui-core/: Cargo.toml
crates/bexa-ui-core/src/: framework.rs  icons.rs  lib.rs  reactive.rs  renderer.rs  signal.rs  theme.rs  tree.rs
crates/bexa-ui-core/src/widgets/: bar_chart.rs  button.rs  checkbox.rs  container.rs  flex.rs  icon.rs  image.rs  label.rs  mod.rs  modal.rs  radio.rs  scroll_view.rs  select.rs  slider.rs  table.rs  tabs.rs  terminal.rs  text_input.rs  toggle.rs  tooltip.rs  tree_view.rs
crates/bexa-ui-render/: Cargo.toml
crates/bexa-ui-render/src/: lib.rs
crates/bexa-ui/src/: lib.rs
examples/: Cargo.toml  buttons_status.rs  checkbox_radio.rs  conditional_rendering.rs  dashboard.rs  devops_console.rs  for_loop_rendering.rs  form_fake.rs  hello.rs  image_fit.rs  layout_grid.rs  list_fake.rs  mega_dashboard.rs  terminal.rs  theme_gallery.rs  widget_showcase.rs
examples/assets/: placeholder.ppm
