[package]
name = "bexa-ui-core"
version = "0.2.0"
edition = "2024"
description = "Core widgets, layout, and signals for BexaUI — the hacker's UI toolkit for Rust"
license = "MIT"
repository = "https://github.com/leonardocxavier/BEXA3UI"
homepage = "https://github.com/leonardocxavier/BEXA3UI"
keywords = ["gui", "ui", "wgpu", "terminal", "devtools"]
categories = ["gui", "graphics"]
readme = "../../README.md"

[features]
default = []
terminal = ["portable-pty", "vte"]

[dependencies]
winit = "0.29"
taffy = "0.4"
glyphon = "0.10.0"
arboard = "3"
portable-pty = { version = "0.9", optional = true }
vte = { version = "0.15", optional = true }
