[package]
name = "bexa-ui-render"
version = "0.2.0"
edition = "2024"
description = "GPU rendering backend for BexaUI — wgpu + glyphon text rendering"
license = "MIT"
repository = "https://github.com/leonardocxavier/BEXA3UI"
homepage = "https://github.com/leonardocxavier/BEXA3UI"
keywords = ["gui", "wgpu", "rendering", "gpu"]
categories = ["gui", "graphics", "rendering"]
readme = "../../README.md"

[dependencies]
bexa-ui-core = { version = "0.2.0", path = "../bexa-ui-core" }
bytemuck = { version = "1.14", features = ["derive"] }
glyphon = "0.10.0"
image = "0.25"
pollster = "0.3"
taffy = "0.4"
wgpu = { version = "28", features = ["wgsl"] }
winit = "0.29"
